k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fsltest
  name: fsltest
  namespace: production
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fsltest
  type: ClusterIP
status:
  loadBalancer: {}
