k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsltest
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - backend:
          service:
            name: fsltest
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
